Create the SwipeButtons component

--- a/src/components/TinderCards.css
+++ b/src/components/TinderCards.css
@@ -9,6 +9,7 @@
   border-radius: 20px;
   background-size: cover;
   background-position: center;
+  margin-bottom: 150px;
 }
 
 .tinderCards__cardContainer {
